# osg-robot-visualizer

./: .gitmodules  CMakeLists.txt  Makefile  README.md
data_files/: hrp4_description.yaml  hrp4_stairs.yaml
src/: configuration.h  drawing_functions.h  robots.h  tools.h  visualizer.cpp
util/: dae_to_obj.py
video_output/: Makefile
